exercise and workouts now seperate
